<resources>
    <string name="facebook_app_id">2480755805336301</string>
    <string name="fb_login_protocol_scheme">fb2480755805336301</string>
    <string name="app_name_capital">SMART HOME</string>
    <string name="app_version_text">Version:</string>
    <string name="app_author">MeembuSoft Team</string>
    <string name="app_author_email">codegarage.tech.us@gmail.com</string>
    <string name="app_contact_subject">"Contact Support"</string>
    <string name="app_contact_body">""</string>
    <string name="app_publisher_id">8721116055633300205</string>
    <string name="app_publisher_facebook_id">CodeGarage-563906867283858</string>
    <string name="app_publisher_twitter_id">codegarage_tech</string>
    <string name="app_publisher_profile_website">http://www.codegarage.tech/</string>
    <string name="app_publisher_company_html_path">http://www.codegarage.tech/</string>
    <string name="app_publisher_privacy_html_path">http://codegarage.tech/privacy_and_policy.html</string>
    <string name="app_publisher_acknowledgment_html_path">http://codegarage.tech/terms_and_conditions.html</string>
    <string name="app_play_store_url">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="app_name_navigation">Smart Home</string>
    <string name="txt_version">version</string>
    <string name="txt_smart">Smart</string>
    <string name="txt_home">Home</string>
    <string name="txt_save">Save</string>
    <string name="title_fragment_add_device">ADD DEVICE</string>
    <string name="title_fragment_select_room">SELECT ROOM</string>
    <string name="title_fragment_choose_device">CHOOSE DEVICE</string>
    <string name="title_fragment_attach_appliance">ATTACH APPLIANCE</string>
    <string name="title_fragment_ensure_connectivity">ENSURE CONNECTIVITY</string>
    <string name="title_fragment_connect_device">CONNECT DEVICE</string>
    <string name="title_fragment_preview">PREVIEW</string>
    <string name="title_activity_add_device">ADD DEVICE</string>
    <string name="title_activity_bluetooth_configuration">BLUETOOTH CONFIGURATION</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="title_activity_login_via_qr_code">LOGIN VIA QR CODE</string>
    <string name="title_activity_signup">SIGNUP</string>
    <string name="title_activity_device_detail">DEVICE DETAIL</string>
    <string name="title_activity_device_detail_settings">DEVICE SETTINGS</string>
    <string name="title_activity_edit_device">EDIT DEVICE</string>
    <string name="title_activity_product_detail">PRODUCT DETAIL</string>
    <string name="title_activity_download_app">Download App</string>
    <string name="title_activity_about_profile">ABOUT PROFILE</string>
    <string name="title_activity_set_timer">SET TIMER</string>
    <string name="title_activity_orders">ORDER</string>
    <string name="title_activity_order_detail">ORDER DETAIL</string>
    <string name="title_activity_order_confirmation">ORDER CONFIRMATION</string>
    <string name="title_activity_announcement_detail">ANNOUNCEMENT DETAIL</string>
    <string name="title_activity_favorite_product">FAVORITE PRODUCT</string>
    <string name="title_activity_cart">CART</string>
    <string name="title_activity_online_support">ONLINE SUPPORT</string>
    <string name="title_activity_forgot_password">FORGOT PASSWORD</string>
    <string name="title_activity_add_new_address">Add New Address</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="toast_ignored_fast_click">Ignored fast click!</string>
    <string name="toast_please_input_your_ssid">Please input your SSID</string>
    <string name="toast_please_input_your_password">Please input your password</string>
    <string name="toast_network_error">You have no internet connection!\nPlease connect to internet.</string>
    <string name="toast_could_not_retrieve_info">Could not retrieve info</string>
    <string name="toast_no_info_found">No info found</string>
    <string name="dialog_close_app_title">Message</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_do_you_want_to_close_the_app">Do you want to close the app?</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_login_mobile_no">Mobile No</string>
    <string name="title_activity_back">Back</string>
    <string name="title_activity_connect">or connect with</string>
    <string name="title_activity_sign_up">Don\'t have account? Sign up now</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_gmail">Gmail</string>
    <string name="title_forgot_password">Forgot password? Reset now</string>
    <string name="title_activity_signup_username">Username</string>
    <string name="title_activity_signup_email">Email</string>
    <string name="title_activity_signup_acct">Already have account? Sign in now</string>
    <string name="txt_favourite_device">Favourite Device</string>
    <string name="txt_select_room">Select Room</string>
    <string name="txt_my_room">My Room</string>
    <string name="txt_choose_device">Choose Device</string>
    <string name="txt_choose_manually">Choose Manually</string>
    <string name="txt_connect_device">Connect Device</string>
    <string name="txt_connect_wifi">Connect Wifi</string>
    <string name="txt_wifi">Wifi</string>
    <string name="txt_bluetooth">Bluetooth</string>
    <string name="txt_mobile_data">Mobile Data</string>
    <string name="txt_scan_qr_code">Scan QR Code</string>
    <string name="txt_please_select_one_device">Please select one product</string>
    <string name="txt_please_select_one_wifi">Please select one wifi</string>
    <string name="txt_select_at_least_one_device">Select at least one product</string>
    <string name="txt_scan_your_qr_code_or_bar_code">Scan your QR Code or Bar Code</string>
    <string name="txt_sorry_we_could_not_detect_your_device">Sorry, we could not detect your product!</string>
    <string name="txt_or">Or</string>
    <string name="txt_more">MORE</string>
    <string name="top_rated_movies_topic">Top Rated Movies</string>
    <string name="most_popular_movies_topic">Most Popular Movies</string>
    <string-array name="steps_titles">
        <item>Choose Device</item>
        <item>Attach Device With Appliance</item>
        <item>Ensure Connectivity</item>
        <item>Connect Device</item>
    </string-array>
    <string name="txt_enjoy_controlling">Enjoy Controlling</string>
    <string name="txt_form_hint_title">Alarm name (required)</string>
    <string name="txt_choose_device_by_any_way">Choose product by any way</string>
    <string name="txt_empty">(Empty)</string>
    <string name="txt_attached">Attached</string>
    <string name="txt_detached">Detached</string>
    <string name="txt_connected">Connected</string>
    <string name="txt_disconnected">Disconnected</string>
    <string name="txt_form_hint_description">Alarm description (optional)</string>
    <string name="txt_form_sending_data_message">Adding new alarm…</string>
    <string name="form_discard_cancel">Cancel</string>
    <string name="form_discard">Discard</string>
    <string name="form_discard_question">Discard alarm?</string>
    <string name="form_info_will_be_lost">All the information about this new alarm will be lost</string>
    <string name="txt_input_password">Input Password</string>
    <string name="txt_device_is_not_connected">Device is not connected</string>
    <string name="txt_connected_with_the_device">Connected with the product</string>
    <string name="txt_input_ssid">Input SSID or choose SSID</string>
    <string name="txt_wifi_disconnected_or_changed">Wifi disconnected or changed</string>
    <string name="txt_wifi_5g_message">Device don\'t support 5G Wifi, please make sure the currently connected Wifi is 2.4G</string>
    <string name="txt_location_disable_message">Location(GPS) is disable</string>
    <string name="txt_create_esptouch_task_failed">Create Esptouch task failed, the esptouch port could be used by other thread</string>
    <string name="txt_esptouch_fail">Esptouch fail</string>
    <string name="txt_attach_your_iot_device_with_home_appliance">Attach your IoT product with home appliance</string>
    <string name="txt_ensure_your_active_wifi_connection">Ensure your active wifi connection</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_select_room_from_suggested_rooms_below">Select room from suggested rooms below where you want use your IoT product. Or you can also select room adding more rooms.</string>
    <string name="txt_please_input_desired_room_name">Please input desired room name</string>
    <string name="txt_room_name">Room name</string>
    <string name="txt_select_your_room">SELECT YOUR ROOM</string>
    <string name="txt_add_room">Add Room</string>
    <string name="txt_please_select_one_room">Please select one room</string>
    <string name="txt_choose_your_iot_device">CHOOSE YOUR IOT DEVICE</string>
    <string name="txt_select_device_using_qr_code_or_manually">Select product using QR code or manually.</string>
    <string name="txt_qr_code">QR Code</string>
    <string name="txt_manually">Manually</string>
    <string name="txt_select_your_device">Select your product</string>
    <string name="txt_please_choose_one_device">Please choose one product</string>
    <string name="txt_ensure_your_connection_type">ENSURE YOUR CONNECTION TYPE</string>
    <string name="txt_please_select_your_connection_type">Please select your connection type</string>
    <string name="txt_select_connection_type_to_control_device">Select connection type to control product</string>
    <string name="txt_connect_to_internet">CONNECT TO INTERNET</string>
    <string name="txt_connect_your_iot_device_to_wifi">Connect your IoT product to wifi. Device don\'t support 5G Wifi, please make sure the currently connected Wifi is 2.4G.</string>
    <string name="txt_choose_wifi">Choose Wifi</string>
    <string name="txt_searching">Searching...</string>
    <string name="txt_password">Password</string>
    <string name="txt_please_choose_your_wifi">Plesae choose your wifi</string>
    <string name="txt_please_choose_your_wifi_password">Plesae choose your wifi password</string>
    <string name="txt_select_your_wifi">Select your wifi</string>
    <string name="txt_account">Account</string>
    <string name="txt_more_settings">More</string>
    <string name="txt_about_profile">About Profile</string>
    <string name="txt_logn_or_create_account">Login/Create Account</string>
    <string name="txt_logn_via_qr_code">Login via QR Code</string>
    <string name="txt_orders">Orders</string>
    <string name="txt_favorite_product">Favorite Product</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_just_submit_the_email_address">Just submit the email address you\'ve used to register with us and we will send you a password reset link!</string>
    <string name="txt_input_registered_email_address">Input Registered Email Address</string>
    <string name="txt_submit_email_address">SUBMIT EMAIL ADDRESS</string>
    <string name="txt_shipping_address_contact_name_hint">Contact Name</string>
    <string name="txt_shipping_address_street_address_hint">Street address,P.O. box,etc.</string>
    <string name="txt_shipping_address_city_hint">City</string>
    <string name="txt_shipping_address_area_hint">Area</string>
    <string name="txt_shipping_address_city_zip_hint">Zip/Postal Code</string>
    <string name="txt_shipping_address_set_default_address_title">Set as default shipping address</string>
    <string name="txt_order_summary_promo_code">Enter code here</string>
    <string name="txt_order_apply_promo_code_title">Apply Promo Code</string>
    <string name="txt_order_apply_title">Apply</string>
</resources>