<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_base" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorShadeBlue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/vector_forgot_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_15"
                android:gravity="center"
                android:text="@string/txt_forgot_password"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_30"
                android:gravity="center"
                android:text="@string/txt_just_submit_the_email_address"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/shape_round_border_bg_blue_shade"
                android:hint="@string/txt_input_registered_email_address"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15" />

            <Button
                android:id="@+id/btn_submit_email_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/selector_round_border_primary_bg_primary"
                android:text="@string/txt_submit_email_address"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>