<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorShadeBlue"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/txt_connect_to_internet"
                        android:textSize="@dimen/sp_25"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="200dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="-25dp"
                        android:layout_marginBottom="@dimen/dp_30"
                        android:background="@drawable/shape_round_bottom_right"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:rotation="80">

                        <ImageView
                            android:id="@+id/iv_connect_device"
                            android:layout_width="@dimen/dp_130"
                            android:layout_height="@dimen/dp_130"
                            android:rotation="-80" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".7"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10">

                    <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dp_10"
                        android:background="@color/red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_connect_your_iot_device_to_wifi"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10">

                    <LinearLayout
                        android:id="@+id/ll_choose_wifi"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="@dimen/dp_60"
                            android:layout_height="@dimen/dp_60"
                            android:layout_marginBottom="@dimen/dp_5"
                            android:background="@drawable/circle_shadow_bg"
                            android:padding="@dimen/dp_10">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/vector_settings_circular_bg_white" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_choose_wifi"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/sp_16" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_15"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:background="@drawable/shape_rectangle_border_primary_bg_blue_shade"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10">

                    <EditText
                        android:id="@+id/edt_ssid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/txt_searching"
                        android:inputType="text"
                        android:text=""
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_15"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
                    android:background="@drawable/shape_rectangle_border_primary_bg_blue_shade"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/txt_password"
                        android:inputType="textPassword"
                        android:text=""
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>